--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".AddServerActivity"
+            android:launchMode= "singleInstance"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
