--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,40 +17,43 @@
     <application
         android:name=".IgniterApplication"
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:dataExtractionRules="@xml/data_extraction_rules"
         tools:ignore="DataExtractionRules"
         tools:targetApi="s">
         <activity
-            android:name=".servers.activity.AddServerActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".settings.SettingsActivity"
+            android:name=".ui.ServersActivity"
             android:exported="false" />
         <activity
-            android:name=".ClashFileEditorActivity"
+            android:name=".ui.servers.activity.AddServerActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".exempt.activity.ExemptAppActivity"
-            android:theme="@style/AppThemeNoTitle" />
-        <activity android:name=".tile.qrcode.ScanQRCodeActivity" />
+            android:name=".ui.settings.SettingsActivity"
+            android:exported="false" />
         <activity
-            android:name=".servers.activity.ServerListActivity"
+            android:name=".ui.ClashFileEditorActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.exempt.activity.ExemptAppActivity"
+            android:theme="@style/AppThemeNoTitle" />
+        <activity android:name=".ui.tile.qrcode.ScanQRCodeActivity" />
+        <activity
+            android:name=".ui.servers.activity.ServerListActivity"
             android:theme="@style/AppThemeNoTitle" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan|stateHidden">
@@ -83,7 +86,7 @@
             </intent-filter>
         </service>
         <service
-            android:name=".tile.IgniterTileService"
+            android:name=".ui.tile.IgniterTileService"
             android:directBootAware="true"
             android:enabled="true"
             android:exported="true"
