--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,11 @@ dependencies {
     // Never updated this to higher version before new branches
     implementation 'androidx.core:core:1.9.0'
 
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    // Retrofit with Moshi Converter
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+
     implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.7'
     implementation "org.yaml:snakeyaml:1.18:android"
     implementation 'androidx.test:core:1.5.0'
