--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,34 +26,34 @@
         tools:ignore="DataExtractionRules"
         tools:targetApi="s">
         <activity
-            android:name=".ui.ServersActivity"
+            android:name=".activities.ServersActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.servers.activity.AddServerActivity"
+            android:name=".activities.servers.activity.AddServerActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.settings.SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.ClashFileEditorActivity"
+            android:name=".activities.ClashFileEditorActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.exempt.activity.ExemptAppActivity"
+            android:name=".activities.exempt.activity.ExemptAppActivity"
             android:theme="@style/AppThemeNoTitle" />
-        <activity android:name=".ui.tile.qrcode.ScanQRCodeActivity" />
+        <activity android:name=".activities.ScanQRCodeActivity" />
         <activity
-            android:name=".ui.servers.activity.ServerListActivity"
+            android:name=".activities.servers.activity.ServerListActivity"
             android:theme="@style/AppThemeNoTitle" />
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan|stateHidden">
@@ -73,7 +73,7 @@
         </receiver>
 
         <service
-            android:name=".ProxyService"
+            android:name=".services.ProxyService"
             android:directBootAware="true"
             android:exported="false"
             android:permission="android.permission.BIND_VPN_SERVICE"
@@ -86,7 +86,7 @@
             </intent-filter>
         </service>
         <service
-            android:name=".ui.tile.IgniterTileService"
+            android:name=".services.IgniterTileService"
             android:directBootAware="true"
             android:enabled="true"
             android:exported="true"
