--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'jacoco'
+
 android {
     compileSdk 33
     defaultConfig {
@@ -25,6 +27,9 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            testCoverageEnabled true
         }
     }
     externalNativeBuild {
@@ -98,7 +103,8 @@ dependencies {
 
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.9.3')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.3')
-    testRuntimeOnly('org.junit.vintage:junit-vintage-engine:5.4.0')
+    testRuntimeOnly('org.junit.vintage:junit-vintage-engine:5.9.3')
 
     implementation files('src/libs/golibs.aar')
 }
+
