--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdk 33
     defaultConfig {
         applicationId "io.github.freewebmovement.igniter"
-        minSdkVersion 21
+        minSdkVersion 31
         targetSdkVersion 33
         versionCode 1
         versionName "0.1.1"
@@ -91,6 +91,7 @@ dependencies {
     implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.7'
     implementation "org.yaml:snakeyaml:1.18:android"
     implementation 'androidx.test:core:1.5.0'
+    implementation 'androidx.work:work-runtime-ktx:2.7.0'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.android.support.test:runner:1.0.2'
