--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'jacoco'
 
 android {
-    compileSdk 33
+    compileSdk 34
     defaultConfig {
         applicationId "io.github.freewebmovement.igniter"
-        minSdkVersion 31
-        targetSdkVersion 33
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "0.1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -20,6 +20,9 @@ android {
             }
         }
         ndkVersion "19.2.5345600"
+//        ndkVersion "20.1.5948944"
+//        ndkVersion "23.1.7779620"
+
         multiDexEnabled true
     }
 
@@ -50,7 +53,7 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
-    tasks.withType(Test) {
+    tasks.withType(Test).configureEach {
         useJUnitPlatform()
         testLogging {
             exceptionFormat "full"
@@ -69,18 +72,18 @@ android {
 }
 
 dependencies {
-    def room_version = "2.5.2"
+    def room_version = "2.6.1"
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Never updated this to higher version before new branches
-    implementation 'androidx.core:core:1.9.0'
+    implementation 'androidx.core:core:1.12.0'
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
@@ -91,7 +94,7 @@ dependencies {
     implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.7'
     implementation "org.yaml:snakeyaml:1.18:android"
     implementation 'androidx.test:core:1.5.0'
-    implementation 'androidx.work:work-runtime-ktx:2.7.0'
+    implementation 'androidx.work:work-runtime-ktx:2.9.0'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.android.support.test:runner:1.0.2'
