--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
     <uses-permission
         android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SYSTEM_EXEMPTED" />
+
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"
+        tools:ignore="ProtectedPermissions" />
+
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <application
         android:name=".IgniterApplication"
@@ -74,11 +80,13 @@
 
         <service
             android:name=".services.ProxyService"
+            android:foregroundServiceType="systemExempted"
             android:directBootAware="true"
             android:exported="false"
             android:permission="android.permission.BIND_VPN_SERVICE"
             android:process=":proxy"
-            tools:targetApi="N">
+            tools:targetApi="35"
+            tools:ignore="ForegroundServicePermission">
             <intent-filter>
                 <action android:name="android.net.VpnService" />
                 <action android:name="io.github.freewebmovement.igniter.STOP_SERVICE" />
