default to exempt all packages

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
-            testCoverageEnabled true
+            enableUnitTestCoverage true
+            enableAndroidTestCoverage true
         }
     }
     externalNativeBuild {
