--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,16 @@
 
 buildscript {
     
+    ext {
+        kotlin_version = '2.1.0'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.7.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
